@@ -2,9 +2,8 @@ package com.robosoft.internmanagement.service;
 
 import com.robosoft.internmanagement.model.*;
 import com.robosoft.internmanagement.modelAttributes.*;
-import com.robosoft.internmanagement.service.jwtSecurity.JwtFilter;
-import com.robosoft.internmanagement.service.jwtSecurity.TokenManager;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.BeanPropertyRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
@@ -13,8 +12,10 @@ import javax.servlet.http.HttpServletRequest;
 import java.sql.Date;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class RecruiterService implements RecruiterServices
@@ -25,11 +26,13 @@ public class RecruiterService implements RecruiterServices
     @Autowired
     private MemberService memberService;
 
+    @Autowired
+    private CandidateService candidateService;
+
     String query;
 
-
     public List<?> getAllOrganizers(){
-        query = "select emailId, name, photoUrl from MembersProfile where position = 'ORGANIZER'";
+        query = "select emailId, name, photoUrl from membersprofile where position = 'ORGANIZER'";
         return jdbcTemplate.query(query, new BeanPropertyRowMapper<>(MemberModel.class));
     }
 
@@ -37,55 +40,67 @@ public class RecruiterService implements RecruiterServices
     {
         String status = "NEW";
         List<Organizer> organizerList = new ArrayList<>();
-        query = "select name, emailId, photoUrl from MembersProfile inner join Assignboard on emailId = organizerEmail where recruiterEmail = ? and status=? group by organizerEmail";
+        query = "select name, emailId, photoUrl from membersprofile inner join assignboard on emailId = organizerEmail where recruiterEmail = ? and status=? group by organizerEmail";
+            jdbcTemplate.query(query,
+                    (resultSet, no) -> {
+                        Organizer organizer = new Organizer();
+                        organizer.setName(resultSet.getString(1));
+                        organizer.setPhotoUrl(resultSet.getString(3));
+                        organizer.setInterviews(getInterviewsCount(resultSet.getString(2), memberService.getUserNameFromRequest(request)));
+                        organizerList.add(organizer);
+                        return organizer;
+                    }, memberService.getUserNameFromRequest(request), status);
 
-        jdbcTemplate.query(query,
-                (resultSet, no) -> {
-                    Organizer organizer = new Organizer();
-                    organizer.setName(resultSet.getString(1));
-                    organizer.setPhotoUrl(resultSet.getString(3));
-                    organizer.setInterviews(getInterviewsCount(resultSet.getString(2), memberService.getUserNameFromRequest(request)));
-                    organizerList.add(organizer);
-                    return organizer;
-                }, memberService.getUserNameFromRequest(request), status);
+            Collections.sort(organizerList);
 
-        Collections.sort(organizerList);
-
-        if(limit == null){
-            limit = organizerList.size();
-        }
-        return organizerList.subList(0, limit);
+            if (limit == null) {
+                limit = organizerList.size();
+            }
+            if (organizerList.size() >= limit)
+                return organizerList.subList(0, limit);
+            return Arrays.asList(organizerList.subList(0, organizerList.size()));
     }
 
     public int getInterviewsCount(String organizerEmail, String recruiterEmail){
-        query = "select count(*) from Assignboard where organizerEmail = ? and recruiterEmail = ?";
-        return jdbcTemplate.queryForObject(query, Integer.class, organizerEmail, recruiterEmail);
+        try {
+            query = "select count(*) from assignboard where organizerEmail = ? and recruiterEmail = ?";
+            return jdbcTemplate.queryForObject(query, Integer.class, organizerEmail, recruiterEmail);
+        } catch (Exception e) {
+            return 0;
+        }
     }
 
     public Summary getSummary(Date date, HttpServletRequest request)
     {
         String currentUser = memberService.getUserNameFromRequest(request);
-
-        Summary summary = new Summary();
-        query = "select count(*) from Assignboard where month(assignDate)=? and year(assignDate)= ? and status = ? and recruiterEmail=?";
-        int shortlisted = jdbcTemplate.queryForObject(query, Integer.class,date.toLocalDate().getMonthValue(),date.toLocalDate().getYear(),"SHORTLISTED", currentUser);
-        summary.setShortlisted(shortlisted);
-        query = "select count(*) from Assignboard where month(assignDate)=? and year(assignDate)=? and status=? and recruiterEmail=?";
-        int onHold = jdbcTemplate.queryForObject(query, Integer.class,date.toLocalDate().getMonthValue(),date.toLocalDate().getYear(),"NEW", currentUser);
-        summary.setOnHold(onHold);
-        query = "select count(*) from Assignboard where month(assignDate)=? and year(assignDate)=? and status=? and recruiterEmail=?";
-        int rejected = jdbcTemplate.queryForObject(query, Integer.class,date.toLocalDate().getMonthValue(),date.toLocalDate().getYear(),"REJECTED", currentUser);
-        summary.setRejected(rejected);
-        int assigned = jdbcTemplate.queryForObject(query, Integer.class,date.toLocalDate().getMonthValue(),date.toLocalDate().getYear(), "ASSIGNED", currentUser);
-        int applications=shortlisted + onHold + rejected + assigned;
-        summary.setApplications(applications);
-        return summary;
+        try {
+            Summary summary = new Summary();
+            query = "select count(*) from assignboard where month(assignDate)=? and year(assignDate)= ? and status = ? and recruiterEmail=?";
+            int shortlisted = jdbcTemplate.queryForObject(query, Integer.class, date.toLocalDate().getMonthValue(), date.toLocalDate().getYear(), "SHORTLISTED", currentUser);
+            summary.setShortlisted(shortlisted);
+            query = "select count(*) from assignboard where month(assignDate)=? and year(assignDate)=? and status=? and recruiterEmail=?";
+            int onHold = jdbcTemplate.queryForObject(query, Integer.class, date.toLocalDate().getMonthValue(), date.toLocalDate().getYear(), "NEW", currentUser);
+            summary.setOnHold(onHold);
+            query = "select count(*) from assignboard where month(assignDate)=? and year(assignDate)=? and status=? and recruiterEmail=?";
+            int rejected = jdbcTemplate.queryForObject(query, Integer.class, date.toLocalDate().getMonthValue(), date.toLocalDate().getYear(), "REJECTED", currentUser);
+            summary.setRejected(rejected);
+            int assigned = jdbcTemplate.queryForObject(query, Integer.class, date.toLocalDate().getMonthValue(), date.toLocalDate().getYear(), "ASSIGNED", currentUser);
+            int applications = shortlisted + onHold + rejected + assigned;
+            summary.setApplications(applications);
+            return summary;
+        } catch (Exception e) {
+            return new Summary(0,0,0,0);
+        }
     }
 
     public int cvCount(HttpServletRequest request)
     {
-        query = "select count(candidateId) from Assignboard where recruiterEmail=? and organizerEmail is null and deleted = 0";
-        return jdbcTemplate.queryForObject(query, Integer.class, memberService.getUserNameFromRequest(request));
+        try {
+            query = "select count(candidateId) from assignboard where recruiterEmail=? and organizerEmail is null and deleted = 0";
+            return jdbcTemplate.queryForObject(query, Integer.class, memberService.getUserNameFromRequest(request));
+        } catch (Exception e) {
+            return 0;
+        }
     }
 
     public List<?> cvAnalysisPage(Date date, int pageNo, int limit)
@@ -97,36 +112,40 @@ public class RecruiterService implements RecruiterServices
 
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
-        if(pageNo == 1){
-            query = "select count(distinct Applications.designation) from Applications,Technologies where Applications.designation = Technologies.designation and date=? and Applications.deleted = 0 and Technologies.deleted = 0 group by Applications.designation";
-            totalCount = jdbcTemplate.queryForObject(query, Integer.class, date);
+        try {
+            if (pageNo == 1) {
+                query = "select count(distinct applications.designation) from applications,technologies where applications.designation = technologies.designation and date=? and applications.deleted = 0 and technologies.deleted = 0 group by applications.designation";
+                totalCount = jdbcTemplate.queryForObject(query, Integer.class, date);
+            }
+
+            query = "select applications.designation,count(applications.designation),date,status from applications,technologies where applications.designation = technologies.designation and date=? and applications.deleted = 0 and technologies.deleted = 0 group by applications.designation limit ?, ?";
+            List<CvAnalysis> cvAnalyses = jdbcTemplate.query(query,
+                    (resultSet, no) -> {
+                        CvAnalysis cvAnalysis = new CvAnalysis();
+
+                        cvAnalysis.setDesignation(resultSet.getString(1));
+                        cvAnalysis.setApplicants(resultSet.getInt(2));
+                        cvAnalysis.setReceivedDate(resultSet.getDate(3));
+                        cvAnalysis.setStatus(resultSet.getString(4));
+                        cvAnalysis.setLocations(getLocationsByDesignation(resultSet.getString(1)));
+
+                        cvAnalysisList.add(cvAnalysis);
+                        return cvAnalysis;
+                    }, date, offset, limit);
+
+            if (pageNo == 1) {
+                return Arrays.asList(totalCount, cvAnalyses.size(), cvAnalyses);
+            }
+            return Arrays.asList(cvAnalyses.size(), cvAnalyses);
+        }catch (Exception e) {
+            return Arrays.asList();
         }
-
-        query = "select Applications.designation,count(Applications.designation),date,status from Applications,Technologies where Applications.designation = Technologies.designation and date=? and Applications.deleted = 0 and Technologies.deleted = 0 group by Applications.designation limit ?, ?";
-        List<CvAnalysis> cvAnalyses = jdbcTemplate.query(query,
-                (resultSet, no) -> {
-                    CvAnalysis cvAnalysis = new CvAnalysis();
-
-                    cvAnalysis.setDesignation(resultSet.getString(1));
-                    cvAnalysis.setApplicants(resultSet.getInt(2));
-                    cvAnalysis.setReceivedDate(resultSet.getDate(3));
-                    cvAnalysis.setStatus(resultSet.getString(4));
-                    cvAnalysis.setLocations(getLocationsByDesignation(resultSet.getString(1)));
-
-                    cvAnalysisList.add(cvAnalysis);
-                    return cvAnalysis;
-                }, date, offset, limit);
-
-        if(pageNo ==1) {
-            return List.of(totalCount, cvAnalyses.size(), cvAnalyses);
-        }
-        return List.of(cvAnalyses.size(), cvAnalyses);
 
     }
 
     public CvAnalysis searchDesignation(String designation)
     {
-        query  = "select Applications.designation,count(Applications.designation),date,status from Applications inner join Technologies using(designation) where Applications.designation=? and Applications.deleted = 0 and Technologies.deleted = 0 group by Technologies.designation";
+        query  = "select applications.designation,count(applications.designation),date,status from applications inner join technologies using(designation) where applications.designation=? and applications.deleted = 0 and technologies.deleted = 0 group by technologies.designation";
         try {
             return jdbcTemplate.queryForObject(query,
                     (resultSet, no) -> {
@@ -145,18 +164,18 @@ public class RecruiterService implements RecruiterServices
     }
 
     public int updateStatus(String designation, String newStatus){
-        query = "update Technologies set status = ? where designation = ? and deleted = 0";
+        query = "update technologies set status = ? where designation = ? and deleted = 0";
         return jdbcTemplate.update(query, newStatus, designation);
     }
 
     public List<String> getLocationsByDesignation(String designation){
-        query = "select location from Locations where designation = ? and deleted = 0";
+        query = "select location from locations where designation = ? and deleted = 0";
         return jdbcTemplate.queryForList(query, String.class, designation);
     }
 
     public ExtendedCV getBasicCVDetails(int candidateId, HttpServletRequest request){
         try{
-            query = "select " + candidateId + " as candidateId, name, dob, mobileNumber,emailId, jobLocation, position, expYear, expMonth, candidateType, contactPerson, languagesKnown, softwaresWorked, skills, about, expectedCTC, attachmentUrl, imageUrl from CandidatesProfile inner join Documents using(candidateId) inner join Assignboard using(candidateId)  where recruiterEmail= ? and CandidatesProfile.candidateId = ? and CandidatesProfile.deleted = 0 and Documents.deleted = 0 and Assignboard.deleted = 0";
+            query = "select " + candidateId + " as candidateId, name, dob, mobileNumber,emailId, jobLocation, position, expYear, expMonth, candidateType, contactPerson, languagesKnown, softwaresWorked, skills, about, expectedCTC, attachmentUrl, imageUrl from candidatesprofile inner join documents using(candidateId) inner join assignboard using(candidateId)  where recruiterEmail= ? and candidatesprofile.candidateId = ? and candidatesprofile.deleted = 0 and documents.deleted = 0 and assignboard.deleted = 0";
             return jdbcTemplate.queryForObject(query, new BeanPropertyRowMapper<>(ExtendedCV.class), memberService.getUserNameFromRequest(request), candidateId);
         } catch (Exception e) {
             e.printStackTrace();
@@ -165,7 +184,7 @@ public class RecruiterService implements RecruiterServices
     }
 
     public List<Education> getEducationsHistory(int candidateId){
-        query = "select * from Educations where candidateId = ? and deleted = 0";
+        query = "select * from educations where candidateId = ? and deleted = 0";
         try {
             return jdbcTemplate.query(query, new BeanPropertyRowMapper<>(Education.class), candidateId);
         } catch (Exception e) {
@@ -174,7 +193,7 @@ public class RecruiterService implements RecruiterServices
     }
 
     public List<WorkHistory> getWorkHistory(int candidateId){
-        query = "select * from WorkHistories where candidateId = ? and deleted = 0";
+        query = "select * from workhistories where candidateId = ? and deleted = 0";
         try{
             return jdbcTemplate.query(query, new BeanPropertyRowMapper<>(WorkHistory.class), candidateId);
         } catch (Exception e) {
@@ -183,7 +202,7 @@ public class RecruiterService implements RecruiterServices
     }
 
     public List<Link> getSocialLinks(int candidateId){
-        query = "select * from Links  where candidateId = ? and deleted = 0";
+        query = "select * from links  where candidateId = ? and deleted = 0";
         try{
             return jdbcTemplate.query(query, new BeanPropertyRowMapper<>(Link.class), candidateId);
         } catch (Exception e) {
@@ -192,7 +211,7 @@ public class RecruiterService implements RecruiterServices
     }
 
     public String downloadCV(int candidateId, HttpServletRequest request){
-        query = "select attachmentUrl from Documents inner join Assignboard using(candidateId) where candidateId = ? and recruiterEmail = ? and Documents.deleted = 0 and Assignboard.deleted = 0";
+        query = "select attachmentUrl from documents inner join assignboard using(candidateId) where candidateId = ? and recruiterEmail = ? and documents.deleted = 0 and assignboard.deleted = 0";
         try{
             return jdbcTemplate.queryForObject(query, String.class, candidateId, memberService.getUserNameFromRequest(request));
         } catch (Exception e) {
@@ -201,16 +220,56 @@ public class RecruiterService implements RecruiterServices
     }
 
     public List<TopTechnology> getTopTechnologies(String designation) {
-        query = "select Technologies.designation,Locations.location from Technologies left join Locations using(designation) left join Applications using(designation) where Applications.designation != ? and Technologies.deleted = 0 and Locations.deleted = 0 and Applications.deleted = 0 group by Technologies.designation order by count(Applications.designation) desc limit 5";
-        List<TopTechnology> topTechnologies = jdbcTemplate.query(query, new BeanPropertyRowMapper<>(TopTechnology.class),designation);
-        List<String> locations = getLocationsByDesignation(designation);
-        TopTechnology technologies = new TopTechnology(designation,locations);
-        topTechnologies.add(0,technologies);
-        return topTechnologies;
+        try {
+            List<TopTechnology> topTechnologies = new ArrayList<>();
+            query = "select technologies.designation from technologies left join applications using(designation) where applications.designation != ? and applications.deleted = 0 group by technologies.designation order by count(applications.designation) desc limit 5";
+            List<String> topTechnologiesNames = jdbcTemplate.queryForList(query, String.class, designation);
+            topTechnologies.addAll(setTopTechnologyLocations(topTechnologiesNames));
+            System.out.println(topTechnologies.size());
+           if (topTechnologies.size() < 5) {
+               String parameter = "'...'";
+               int required = 5;
+               if(topTechnologies.size() > 0) {
+                   String parameter2 = "";
+                    required = 5 - topTechnologies.size();
+                   List<String> tech = topTechnologies.stream().map(e -> e.getDesignation()).collect(Collectors.toList());
+                   for (String i : tech)
+                       parameter2 += "'" + i + "',";
+                   parameter = parameter2.substring(0,parameter.length()-1);
+               }
+
+               System.out.println(parameter);
+                topTechnologiesNames.clear();
+                query = "select technologies.designation from technologies where technologies.designation not in (" + parameter + ") and technologies.designation != ? and technologies.deleted = 0 limit ?";
+                topTechnologiesNames.addAll(jdbcTemplate.queryForList(query, String.class,designation, required));
+                topTechnologies.addAll(setTopTechnologyLocations(topTechnologiesNames));
+            }
+            List<String> locations = getLocationsByDesignation(designation);
+            TopTechnology technologies = new TopTechnology(designation, locations);
+            topTechnologies.add(0, technologies);
+            return topTechnologies;
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
+    public List<TopTechnology> setTopTechnologyLocations(List<String> technologyNames){
+        try {
+            System.out.println(technologyNames.size());
+            List<TopTechnology> topTechnologies = new ArrayList<>();
+            for (String technology : technologyNames) {
+                List<String> locations = getLocationsByDesignation(technology);
+                TopTechnology technologies = new TopTechnology(technology, locations);
+                topTechnologies.add(technologies);
+            }
+            return topTechnologies;
+        } catch (Exception e) {
+            return Arrays.asList();
+        }
     }
 
     public String getLastJobPosition(int candidateId) {
-        query = "select position from WorkHistories where candidateId = ? order by fromDate desc limit 1";
+        query = "select position from workhistories where candidateId = ? order by fromDate desc limit 1";
         try {
             return jdbcTemplate.queryForObject(query, String.class, candidateId);
         } catch (Exception e) {
@@ -219,17 +278,16 @@ public class RecruiterService implements RecruiterServices
 
     }
 
-    //count mistake
     public List<?> getProfileBasedOnStatus(String designation, String status, int pageNo, int limit, HttpServletRequest request) {
 
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
         if(pageNo == 1){
-            query = "select count(distinct Applications.candidateId) from CandidatesProfile inner join Documents using(candidateId) inner join Applications using(candidateId) inner join Assignboard using(candidateId) where recruiterEmail = ? and Assignboard.status = ? and Applications.designation = ? and CandidatesProfile.deleted = 0 and Documents.deleted = 0 and Assignboard.deleted = 0 and Applications.deleted = 0";
+            query = "select count(distinct applications.candidateId) from candidatesprofile inner join documents using(candidateId) inner join applications using(candidateId) inner join assignboard using(candidateId) where recruiterEmail = ? and assignboard.status = ? and applications.designation = ? and candidatesprofile.deleted = 0 and documents.deleted = 0 and assignboard.deleted = 0 and applications.deleted = 0";
             totalCount = jdbcTemplate.queryForObject(query, Integer.class, memberService.getUserNameFromRequest(request), status, designation);
         }
 
-        query = "select CandidatesProfile.candidateId, name, imageUrl, skills, position from CandidatesProfile inner join Documents using(candidateId) inner join Applications using(candidateId) inner join Assignboard using(candidateId) where recruiterEmail = ? and Assignboard.status = ? and Applications.designation = ? and CandidatesProfile.deleted = 0 and Documents.deleted = 0 and Assignboard.deleted = 0 and Applications.deleted = 0 group by Applications.applicationId limit ?, ?";
+        query = "select candidatesprofile.candidateId, name, imageUrl, skills, position from candidatesprofile inner join documents using(candidateId) inner join applications using(candidateId) inner join assignboard using(candidateId) where recruiterEmail = ? and assignboard.status = ? and applications.designation = ? and candidatesprofile.deleted = 0 and documents.deleted = 0 and assignboard.deleted = 0 and applications.deleted = 0 group by applications.applicationId limit ?, ?";
         List<ProfileAnalysis> profileAnalyses = new ArrayList<>();
         try {
             jdbcTemplate.query(query,
@@ -245,9 +303,9 @@ public class RecruiterService implements RecruiterServices
                     }, memberService.getUserNameFromRequest(request), status, designation, offset, limit);
 
             if(pageNo == 1) {
-                return List.of(totalCount, profileAnalyses.size(), profileAnalyses);
+                return Arrays.asList(totalCount, profileAnalyses.size(), profileAnalyses);
             }
-            return List.of(profileAnalyses.size(), profileAnalyses);
+            return Arrays.asList(profileAnalyses.size(), profileAnalyses);
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -258,7 +316,7 @@ public class RecruiterService implements RecruiterServices
 
     public List<Application> getNotAssignedApplicants(HttpServletRequest request)
     {
-        query = "select Assignboard.candidateId, imageUrl,emailId,mobileNumber,designation,location,date from Assignboard inner join Applications using(candidateId) inner join CandidatesProfile using(candidateId) inner join Documents using(candidateId) where organizerEmail is null and recruiterEmail = ? and Applications.deleted = 0 and Assignboard.deleted = 0 and CandidatesProfile.deleted = 0 and Documents.deleted = 0";
+        query = "select assignboard.candidateId, imageUrl,emailId,mobileNumber,designation,location,date from assignboard inner join applications using(candidateId) inner join candidatesprofile using(candidateId) inner join documents using(candidateId) where organizerEmail is null and recruiterEmail = ? and applications.deleted = 0 and assignboard.deleted = 0 and candidatesprofile.deleted = 0 and documents.deleted = 0";
         return jdbcTemplate.query(query,new BeanPropertyRowMapper<>(Application.class), memberService.getUserNameFromRequest(request));
     }
 
@@ -266,15 +324,18 @@ public class RecruiterService implements RecruiterServices
     {
         String currentUser = memberService.getUserNameFromRequest(request);
         try {
-            query = "Select count(*) from Assignboard where candidateId = ? and recruiterEmail = ? and status = 'rejected' and deleted = 0";
+            if (!candidateService.isVacantPosition(memberService.getAssignBoardPageDetails(assignBoard).getDesignation())){
+                return "Designation status closed. No vacancy";
+            }
+            query = "Select count(*) from assignboard where candidateId = ? and recruiterEmail = ? and status = 'rejected' and deleted = 0";
             int count = jdbcTemplate.queryForObject(query, Integer.class, assignBoard.getCandidateId(), currentUser);
             if(count == 0) {
-                query = "select name from MembersProfile where emailId=? and position=?";
+                query = "select name from membersprofile where emailId=? and position=?";
                 jdbcTemplate.queryForObject(query, String.class, assignBoard.getOrganizerEmail(), "ORGANIZER");
-                query = "select candidateId from Assignboard where recruiterEmail=? and candidateId=?";
+                query = "select candidateId from assignboard where recruiterEmail=? and candidateId=?";
                 jdbcTemplate.queryForObject(query, Integer.class, currentUser, assignBoard.getCandidateId());
                 try {
-                    query = "update Assignboard set organizerEmail =?, assignDate=curDate(), status = 'NEW' where recruiterEmail=? and candidateId=?";
+                    query = "update assignboard set organizerEmail =?, assignDate=curDate(), status = 'NEW' where recruiterEmail=? and candidateId=?";
                     jdbcTemplate.update(query, assignBoard.getOrganizerEmail(), currentUser, assignBoard.getCandidateId());
                     return "Candidate assigned successfully";
                 } catch (Exception e) {
@@ -282,14 +343,36 @@ public class RecruiterService implements RecruiterServices
                 }
             }
             else{
-                query = "update Assignboard set status='NEW' where candidateId = ? and recruiterEmail = ? and status = 'REJECTED' and deleted = 0";
+                query = "update assignboard set status='NEW' where candidateId = ? and recruiterEmail = ? and status = 'REJECTED' and deleted = 0";
                 jdbcTemplate.update(query, assignBoard.getCandidateId(), currentUser);
                 return "Updated";
             }
         } catch (Exception e) {
-            e.printStackTrace();
-            return "Select correct Recruiter/Organizer to assign";
+            return "Select correct Recruiter/Organizer/Candidate to assign";
         }
+    }
+
+    public boolean rejectAssignedCandidate(int candidateId, HttpServletRequest request){
+        String query = "update assignboard set status='REJECTED' where candidateId=? and recruiterEmail=? and status=? and deleted = 0";
+        int status = jdbcTemplate.update(query,candidateId, memberService.getUserNameFromRequest(request),"ASSIGNED");
+        return status >= 1;
+    }
+
+    public boolean reRecruitCandidate(int candidateId, HttpServletRequest request){
+        String query = "update assignboard set status='ASSIGNED', organizerEmail = null where candidateId=? and recruiterEmail=? and status=? and deleted = 0";
+        int status = jdbcTemplate.update(query,candidateId, memberService.getUserNameFromRequest(request),"REJECTED");
+        return status >= 1;
+    }
+
+    public boolean deleteCandidate(int candidateId, HttpServletRequest request){
+        query = "select count(*) from candidatesprofile where candidateId = ? and deleted = 1";
+        if(jdbcTemplate.queryForObject(query, Integer.class, candidateId) > 0)
+            return false;
+        String query = "update candidatesprofile, documents, educations, workhistories, links, applications, assignboard set candidatesprofile.deleted=1, educations.deleted=1, workhistories.deleted=1, documents.deleted=1, links.deleted=1, applications.deleted=1, assignboard.deleted=1 where candidatesprofile.candidateId=? and documents.candidateId=? and educations.candidateId=? and workhistories.candidateId=? and links.candidateId=? and applications.candidateId=? and assignboard.candidateId=? and recruiterEmail=? and assignboard.status = 'REJECTED'";
+        int status = jdbcTemplate.update(query,candidateId, candidateId, candidateId, candidateId, candidateId, candidateId, candidateId, memberService.getUserNameFromRequest(request));
+        query = "update results, assignboard set results.deleted = 1 where results.candidateId=? and assignboard.recruiterEmail=? and results.candidateId = assignboard.candidateId";
+        jdbcTemplate.update(query, candidateId, memberService.getUserNameFromRequest(request));
+        return status >= 1;
     }
 
     public List<?> getAssignBoardPage(int pageNo, int limit, HttpServletRequest request)
@@ -298,16 +381,16 @@ public class RecruiterService implements RecruiterServices
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
         if(pageNo == 1){
-            query = "select count(distinct Applications.candidateId) from MembersProfile inner join Assignboard on MembersProfile.emailId=organizerEmail inner join Applications on AssignBoard.candidateId=Applications.candidateId inner join CandidatesProfile on CandidatesProfile.candidateId=applications.candidateId where recruiterEmail=? and status = 'NEW' and MembersProfile.deleted = 0 and CandidatesProfile.deleted = 0 and Assignboard.deleted = 0 and Applications.deleted = 0";
+            query = "select count(distinct applications.candidateId) from membersprofile inner join assignboard on membersprofile.emailId=organizerEmail inner join applications on AssignBoard.candidateId=applications.candidateId inner join candidatesprofile on candidatesprofile.candidateId=applications.candidateId where recruiterEmail=? and status = 'NEW' and membersprofile.deleted = 0 and candidatesprofile.deleted = 0 and Assignboard.deleted = 0 and applications.deleted = 0";
             totalCount = jdbcTemplate.queryForObject(query, Integer.class, currentUser);
         }
-        query = "select CandidatesProfile.candidateId,CandidatesProfile.name,Applications.designation,Applications.location,AssignBoard.assignDate,MembersProfile.name as organizer  from MembersProfile inner join Assignboard on MembersProfile.emailId=organizerEmail inner join Applications on AssignBoard.candidateId=Applications.candidateId inner join CandidatesProfile on CandidatesProfile.candidateId=applications.candidateId where recruiterEmail=? and status = 'NEW' and MembersProfile.deleted = 0 and CandidatesProfile.deleted = 0 and Assignboard.deleted = 0 and Applications.deleted = 0 group by Applications.candidateId limit ?, ?";
+        query = "select candidatesprofile.candidateId,candidatesprofile.name,applications.designation,applications.location,AssignBoard.assignDate,membersprofile.name as organizer  from membersprofile inner join Assignboard on membersprofile.emailId=organizerEmail inner join applications on AssignBoard.candidateId=applications.candidateId inner join candidatesprofile on candidatesprofile.candidateId=applications.candidateId where recruiterEmail=? and status = 'NEW' and membersprofile.deleted = 0 and candidatesprofile.deleted = 0 and Assignboard.deleted = 0 and applications.deleted = 0 group by applications.candidateId limit ?, ?";
         List<AssignBoardPage> assignBoardPages = jdbcTemplate.query(query,new BeanPropertyRowMapper<>(AssignBoardPage.class), currentUser, offset, limit);
 
         if(pageNo == 1){
-            return List.of(totalCount, assignBoardPages.size(), assignBoardPages);
+            return Arrays.asList(totalCount, assignBoardPages.size(), assignBoardPages);
         }
-        return List.of(assignBoardPages.size(), assignBoardPages);
+        return Arrays.asList(assignBoardPages.size(), assignBoardPages);
     }
 
     public List<?> getRejectedCvPage(int pageNo, int limit, HttpServletRequest request)
@@ -315,11 +398,11 @@ public class RecruiterService implements RecruiterServices
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
         if(pageNo == 1){
-            query = "select count(distinct Applications.candidateId) from Documents inner join CandidatesProfile using(candidateId) inner join Applications using(candidateId) inner join Assignboard using(candidateId) where AssignBoard.status=? and Assignboard.recruiterEmail=? and Documents.deleted = 0 and CandidatesProfile.deleted = 0 and Assignboard.deleted = 0 and Applications.deleted = 0";
+            query = "select count(distinct applications.candidateId) from documents inner join candidatesprofile using(candidateId) inner join applications using(candidateId) inner join Assignboard using(candidateId) where AssignBoard.status=? and Assignboard.recruiterEmail=? and documents.deleted = 0 and candidatesprofile.deleted = 0 and Assignboard.deleted = 0 and applications.deleted = 0";
             totalCount = jdbcTemplate.queryForObject(query, Integer.class, "REJECTED", memberService.getUserNameFromRequest(request));
         }
 
-        query = "select Applications.candidateId, name,imageUrl,Applications.location,mobileNumber from Documents inner join CandidatesProfile using(candidateId) inner join Applications using(candidateId) inner join Assignboard using(candidateId) where AssignBoard.status=? and Assignboard.recruiterEmail=? and Documents.deleted = 0 and CandidatesProfile.deleted = 0 and Assignboard.deleted = 0 and Applications.deleted = 0 group by Applications.candidateId limit ?,?";
+        query = "select applications.candidateId, name,imageUrl,applications.location,mobileNumber from documents inner join candidatesprofile using(candidateId) inner join applications using(candidateId) inner join Assignboard using(candidateId) where AssignBoard.status=? and Assignboard.recruiterEmail=? and documents.deleted = 0 and candidatesprofile.deleted = 0 and Assignboard.deleted = 0 and applications.deleted = 0 group by applications.candidateId limit ?,?";
         List<RejectedCv> rejectedCvList = new ArrayList<>();
         try {
             jdbcTemplate.query(query,
@@ -337,9 +420,9 @@ public class RecruiterService implements RecruiterServices
                     },"REJECTED",memberService.getUserNameFromRequest(request), offset, limit);
 
             if(pageNo == 1){
-                return List.of(totalCount, rejectedCvList.size(), rejectedCvList);
+                return Arrays.asList(totalCount, rejectedCvList.size(), rejectedCvList);
             }
-            return List.of(rejectedCvList.size(), rejectedCvList);
+            return Arrays.asList(rejectedCvList.size(), rejectedCvList);
         }catch (Exception e)
         {
             e.printStackTrace();
@@ -353,22 +436,22 @@ public class RecruiterService implements RecruiterServices
 
         Invite invite=new Invite();
         try {
-            query = "select count(*) from CandidatesInvites where date=curDate() and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where date=curDate() and fromEmail=? and deleted = 0";
             invite.setToday(jdbcTemplate.queryForObject(query, Integer.class, currentUser));
 
-            query = "select count(*) from CandidatesInvites where date=DATE_SUB(curDATE(),INTERVAL 1 DAY) and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where date=DATE_SUB(curDATE(),INTERVAL 1 DAY) and fromEmail=? and deleted = 0";
             invite.setYesterday(jdbcTemplate.queryForObject(query, Integer.class, currentUser));
 
-            query = "select count(*) from CandidatesInvites where month(date)=month(curDate())-1 and year(date)=year(curDate()) and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where month(date)=month(curDate())-1 and year(date)=year(curDate()) and fromEmail=? and deleted = 0";
             invite.setPastMonth(jdbcTemplate.queryForObject(query, Integer.class, currentUser));
 
-            query = "select count(*) from CandidatesInvites where month(date)=month(curDate())-2 and year(date)=year(curDate()) and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where month(date)=month(curDate())-2 and year(date)=year(curDate()) and fromEmail=? and deleted = 0";
             invite.setTwoMonthBack(jdbcTemplate.queryForObject(query, Integer.class, currentUser));
 
-            query = "select count(*) from CandidatesInvites where year(date)=year(curDate())-1 and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where year(date)=year(curDate())-1 and fromEmail=? and deleted = 0";
             invite.setPastYear(jdbcTemplate.queryForObject(query, Integer.class, currentUser));
 
-            query = "select count(*) from CandidatesInvites where year(date)=year(curDate())-2 and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where year(date)=year(curDate())-2 and fromEmail=? and deleted = 0";
             invite.setTwoYearBack(jdbcTemplate.queryForObject(query, Integer.class, currentUser));
 
             return invite;
@@ -384,16 +467,16 @@ public class RecruiterService implements RecruiterServices
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
         if(pageNo == 1){
-            query = "select count(*) from CandidatesInvites where date=? and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where date=? and fromEmail=? and deleted = 0";
             totalCount = jdbcTemplate.queryForObject(query, Integer.class, date, memberService.getUserNameFromRequest(request));
         }
-        query = "select candidateInviteId, candidateName as name,designation,location,CandidateEmail as email from CandidatesInvites where date=? and fromEmail=? and deleted = 0 limit ?, ?";
+        query = "select candidateInviteId, candidateName as name,designation,location,CandidateEmail as email from candidatesinvites where date=? and fromEmail=? and deleted = 0 limit ?, ?";
         List<SentInvite> sentInvites = jdbcTemplate.query(query, new BeanPropertyRowMapper<>(SentInvite.class),date,memberService.getUserNameFromRequest(request), offset, limit);
 
         if(pageNo == 1){
-            return List.of(totalCount, sentInvites.size(), sentInvites);
+            return Arrays.asList(totalCount, sentInvites.size(), sentInvites);
         }
-        return List.of(sentInvites.size(), sentInvites);
+        return Arrays.asList(sentInvites.size(), sentInvites);
 
     }
 
@@ -402,16 +485,16 @@ public class RecruiterService implements RecruiterServices
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
         if(pageNo == 1){
-            query = "select count(*) from CandidatesInvites where month(date)=? and year(date)=? and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where month(date)=? and year(date)=? and fromEmail=? and deleted = 0";
             totalCount = jdbcTemplate.queryForObject(query, Integer.class, date.toLocalDate().getMonthValue(), date.toLocalDate().getYear(), memberService.getUserNameFromRequest(request) );
         }
-        query = "select candidateInviteId, candidateName as name,designation,location,CandidateEmail as email from CandidatesInvites where month(date)=? and year(date)=? and fromEmail=? and deleted =0 limit ?, ?";
+        query = "select candidateInviteId, candidateName as name,designation,location,CandidateEmail as email from candidatesinvites where month(date)=? and year(date)=? and fromEmail=? and deleted =0 limit ?, ?";
         List<SentInvite> sentInvites = jdbcTemplate.query(query, new BeanPropertyRowMapper<>(SentInvite.class), date.toLocalDate().getMonthValue(),date.toLocalDate().getYear(), memberService.getUserNameFromRequest(request), offset, limit);
 
         if(pageNo == 1){
-            return List.of(totalCount, sentInvites.size(), sentInvites);
+            return Arrays.asList(totalCount, sentInvites.size(), sentInvites);
         }
-        return List.of(sentInvites.size(), sentInvites);
+        return Arrays.asList(sentInvites.size(), sentInvites);
 
     }
 
@@ -420,17 +503,17 @@ public class RecruiterService implements RecruiterServices
         int offset = (pageNo - 1) * limit;
         int totalCount = 0;
         if(pageNo == 1){
-            query = "select count(*) from CandidatesInvites where year(date)=? and fromEmail=? and deleted = 0";
+            query = "select count(*) from candidatesinvites where year(date)=? and fromEmail=? and deleted = 0";
             totalCount = jdbcTemplate.queryForObject(query, Integer.class, date.toLocalDate().getYear(), memberService.getUserNameFromRequest(request));
         }
 
-        query = "select candidateInviteId, candidateName as name,designation,location,CandidateEmail as email from CandidatesInvites where year(date)=? and fromEmail=? and deleted = 0 limit ?, ?";
+        query = "select candidateInviteId, candidateName as name,designation,location,CandidateEmail as email from candidatesinvites where year(date)=? and fromEmail=? and deleted = 0 limit ?, ?";
         List<SentInvite> sentInvites = jdbcTemplate.query(query, new BeanPropertyRowMapper<>(SentInvite.class),date.toLocalDate().getYear(),memberService.getUserNameFromRequest(request), offset, limit);
 
         if(pageNo == 1){
-            return List.of(totalCount, sentInvites.size(), sentInvites);
+            return Arrays.asList(totalCount, sentInvites.size(), sentInvites);
         }
-        return List.of(sentInvites.size(), sentInvites);
+        return Arrays.asList(sentInvites.size(), sentInvites);
 
        }
 }
